--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="enter_number">Enter Number</string>
     <string name="search">Search</string>
     <string name="random">Random</string>
+    <string name="add">Add</string>
 </resources>
